helm/meshcommander/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcommander
  namespace: meshcommander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meshcommander
  template:
    metadata:
      labels:
        app: meshcommander
    spec:
      containers:
        - name: meshcommander
          image: harbor.lanfordlabs.com/library/meshcommander:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
