helm/meshcommander/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meshcommander
  namespace: meshcommander
spec:
  type: ClusterIP
  selector:
    app: meshcommander
  ports:
    - port: 80
      targetPort: 3000
